--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nanodegree.anisha.movie">
+    package="com.nanodegree.anisha.movie" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,8 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MovieHome">
+        android:theme="@style/AppTheme" >
+        <activity android:name=".MovieHome" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +18,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".MovieDetails" />
-        <activity android:name=".Review"></activity>
+        <activity android:name=".Review" />
+        <activity
+            android:name=".Trailer"
+            android:label="@string/title_activity_trailer" >
+        </activity>
     </application>
 
 </manifest>
